# EASY-EAI-Toolkit-1126B

./: CLAUDE.md  CRITICAL_MEMORY_FIX.md  DEBUG_RTSP.md  EXAMPLES.md  MEMORY_LEAK_FIX.md  README.md  README_EN.md  RTSP_USAGE.md  player.html  问题，解决方案，实际.md
.workflow-designer/copilot/: workspace-analysis.manifest.json  workspace-analysis.prompt.md  workspace-analysis.result.flow.txt
Demos/: build_all_demo.sh
Demos/algorithm-car/: CMakeLists.txt
Demos/algorithm-person_pose/: build.sh
Demos/algorithm-qrdecode/: CMakeLists.txt
Demos/algorithm-speech_recognition/: CMakeLists.txt
Demos/common-font_engine/: CMakeLists.txt
Demos/common-ini/: CMakeLists.txt  test-iniWrapper.c
Demos/common-qrcode/: CMakeLists.txt  test-QRCode.c
Demos/common-system_opt/: test-timepara-opt.c
Demos/netProtocol-http/: CMakeLists.txt  build.sh
Demos/netProtocol-modbus/: CMakeLists.txt
Demos/netProtocol-mqtt/: CMakeLists.txt
Solutions/rtspIPCamera/: CMakeLists.txt
Solutions/rtspIPCamera/src/: main.cpp
Solutions/rtspMulitPlayer/: CMakeLists.txt  build.sh
Solutions/rtspMulitPlayer/include/: system.h
Solutions/rtspMulitPlayer/src/: main.cpp
Solutions/rtspMulitPlayer/src/analyzer/: algoProcess.cpp  algoProcess.h  analyzer.cpp  analyzer.h
Solutions/rtspMulitPlayer/src/player/: display.cpp
UiSolutions/QDemo/: build.sh
UiSolutions/QDemo/QSrcCode/apiWrapper/: api.pri
UiSolutions/QDemo/QSrcCode/ui/: mainWidget.cpp
easyeai-api/algorithm/car_detect/: api.cmake
easyeai-api/algorithm/face_detect/: api.cmake  decode.cpp  decode.h  face_detect.cpp  face_detect.h  generator.cpp  generator.h  hardward_verify_override.c  tools.cpp  tools.h
easyeai-api/algorithm/face_detect_retian/: README.md  api.cmake  face_detect_retian.cpp  face_detect_retian.h  postprocess.h  test_retian.cpp
easyeai-api/algorithm/face_detect_scrfd/: README.md  api.cmake  face_detect_scrfd.cpp  face_detect_scrfd.h
easyeai-api/algorithm/face_recognition/: api.cmake
easyeai-api/algorithm/fire_detect/: api.cmake
easyeai-api/algorithm/helmet_detect/: api.cmake
easyeai-api/algorithm/ocr/: api.cmake
easyeai-api/algorithm/person_detect/: api.cmake  decryption.c  hardward_verify_override.c  libperson_detect.a.old  person_detect.cpp  person_detect.h  person_detect_postprocess.cpp  postprocess.h  rebuild_library_hybrid.sh
easyeai-api/algorithm/person_pose/: api.cmake
easyeai-api/algorithm/qrdecode/: api.cmake
easyeai-api/algorithm/speech_recognition/: api.cmake
easyeai-api/common/: hardward_verify_override.c
easyeai-api/common/font_engine/: api.cmake
easyeai-api/common/log_manager/: api.cmake
easyeai-api/common/qrcode/: api.cmake
easyeai-api/media/gst_opt/: api.cmake
easyeai-api/media/rga/: api.cmake  rga_wrapper.c  rga_wrapper.h
easyeai-api/netProtocol/mqtt/: api.cmake
src/: CMakeLists.txt  FACE_DETECT_UPGRADE.md  FACE_POSE_DETECTION.md  NAFNET_TINY_RKNN.md  PERFORMANCE_OPTIMIZATION.md  TCP_PROTOCOL.md  build.sh  build_camera_streaming.sh  build_camera_test.sh  build_camera_test_retian.sh  build_test_rknn.sh  bypass_hardware_check.c  camera_streaming.cpp  camera_test.cpp  camera_test_advanced.cpp  camera_test_retian.cpp  camera_test_retian_README.md  camera_test_scrfd.cpp  diagnose_camera.sh  main.cpp  opencv_compat.cpp  p_cam.service  quick_test.sh  test_memory_fix.sh  test_rknn_init.cpp  test_rtsp.sh  update.sh
src/commonApi/: camera.h  mipi_camera.c
src/commonApi/dma/: dma_alloc.c  dma_alloc.h
src/commonApi/gpio/: gpio.c
src/commonApi/uart/: uart.c  uart.h
src/commonApi/usb_camera/: usb_camera.c
src/include/: command.h  command_manager.h  device_config.h  main.h  person_data.h  send_data.h  sort_tracker.h  task_manager.h  tcp_client.h
src/include/tasks/: camera_task.h  gpioMonitor_task.h  heartbeat_task.h  nafnet_tiny_enhancer.h  serial_task.h  uploader_task.h
src/libs/logs/: log.c
src/libs/tinyekf/: tinyekf.h  tinyekf_custom.h
src/tools/: convert_nafnet_tiny_to_rknn.py
src/utils/: device_config.cpp  person_data.cpp  person_sort.cpp  send_data.cpp  tcp_client.cpp
src/utils/tasks/: camera_task.cpp  gpioMonitor_task.cpp  heartbeat_task.cpp  nafnet_tiny_enhancer.cpp  serial_task.cpp  uploader_task.cpp
src/utils/tasks/camera/: camera_task_core.cpp  camera_task_eval.cpp  camera_task_internal.cpp  camera_task_internal.h  camera_task_pipeline.cpp  camera_task_runtime.cpp
workflows/test-cam-1126b/: main.workflow.json
